2009.07.13: David Nichols
	* added assert()s to catch the error where object private data is
	  saved with a 0 value

2009.07.01: David Nichols
	* fixed a bug in Datasource::close(); with debugging enabled, it would
	  trigger an assert, without debugging, would do nothing at all
	* added the module directory as the "ModuleDir" key to the hash output
	  of get_qore_library_info() 

2009.06.25: David Nichols
	* added an optional port number to datasources, that DBI drivers can
	  use if they support module API 0.7 or above; modified the
	  parseDatasource() function to support parsing port numbers;
	  added or modified the following methods to existing classes:
	  + Datasource::constructor(): added support for a port argument
	  + Datasource::setPort(): new method
	  + Datasource::getPort(): new method
	  + DatasourcePool::constructor(): added support for a port argument
	  + DatasourcePool::getPort(): new method

2009.06.24: David Nichols
	* fixed another deadlock in running destructors where a member is
	  deleted that is an object, where that object's destructor references
	  the parent object

2009.06.23: David Nichols
	* always check current directory of script first when looking for
	  %include files if the path is not absolute
	* fixed a deadlock when an object deletes a member and the member
	  tries to access the parent object in the member's destructor
	* fixed a bug reporting the latest module API version; should use
	  library value instead of reporting the value from the header file
	* updated module API to 0.7, updated library version to 5.2, added
	  new QoreObject::externalDelete() function to handle the situation
	  when object private data is deleted externally

2009.06.22: David Nichols
	* added checks to the scanner to give better error messages when
	  trying to include a directory or other non-file

*** v0.7.3 RELEASE *** 

2009.06.08: David Nichols
	* added new HTTPClient methods for manipulating the TCP_NODELAY
	  setting: